Fixed issue with the dashboard Navbar not showing the 'Back to TFW' button

--- a/finalwhistle/static/admin.css
+++ b/finalwhistle/static/admin.css
@@ -39,9 +39,7 @@ body {
 }
 
 .sidebar-sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 48px; /* Height of navbar */
+  margin-top: 55px; /* Height of navbar */
   height: calc(100vh - 48px);
   padding-top: .5rem;
   overflow-x: hidden;
